--- a/app/views/layouts/_navigation.haml
+++ b/app/views/layouts/_navigation.haml
@@ -5,3 +5,5 @@
     %ul.nav.navbar-nav
       %li
         = link_to "Sign Out", sign_out_path, method: :delete
+      %li
+        = link_to "Add Photo", new_image_path
