--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,14 +6,10 @@
     = stylesheet_link_tag('application', media: 'all', 'data-turbolinks-track' => true)
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags 
-  %body
+  %body{ "class" => "#{controller_name} #{action_name}"}
     = render "layouts/navigation"
     = if flash[:notice]
-      %div.container
-        %div.alert.alert-info.alert-dismissible.fade.in{ "role" => "alert" }
-          = flash[:notice]
-          %button.close{ "type" => "button", "data-dismiss" => "alert"}
-            %span x
+      = render "layouts/notice"
 
     = yield 
 
