--- a/app/views/layouts/_navigation.haml
+++ b/app/views/layouts/_navigation.haml
@@ -1,9 +1,16 @@
-%nav.navbar-default
-  %div.container-fluid
+%nav.navbar.navbar-inverse.navbar-fixed-top{ "role" => "navigation"}
+  %div.container
     %div.navbar-header
+      %button.navbar-toggle{"type" => "button", "data-toggle" => "collapse", "data-target" => "#navbar-collapse-target"}
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+
       = link_to "FAMBAM", root_path, class: "navbar-brand"
-    %ul.nav.navbar-nav
-      %li
-        = link_to "Sign Out", sign_out_path, method: :delete
-      %li
-        = link_to "Add Photo", new_image_path
+    
+    %div#navbar-collapse-target.collapse.navbar-collapse
+      %ul.nav.navbar-nav
+        %li
+          = link_to "Sign Out", sign_out_path, method: :delete
+        %li
+          = link_to "Add Photo", new_image_path
